# argent

./: .env.example  ABOUT.md  ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION.md  README.md  RESEARCH.md  RUNDOWN.md  environments.toml  package-lock.json  package.json
agent/: package-lock.json  package.json  tsconfig.json
agent/src/: config.ts  index.ts  scheduler.ts  server.ts  test_account.ts  types.ts  vault-reader.ts  x402-middleware.ts  x402.ts
agent/src/actions/: bidder.ts  common.ts  monitor.ts
agent/src/chain/: horizon.ts  soroban.ts
circuits/auction_price/: auction_price.circom
circuits/health_factor/: health_factor.circom
circuits/price_attestation/: price_attestation.circom
contracts/vault/: Cargo.toml
contracts/vault/src/: interest.rs  lib.rs  storage.rs  types.rs
contracts/vusdc/: Cargo.toml
contracts/vusdc/src/: lib.rs
contracts/zk-verifier/: Cargo.toml
contracts/zk-verifier/src/: lib.rs
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx
frontend/src/components/: AgentFeed.tsx  AuctionLeaderboard.tsx  AuctionPanel.tsx  BorrowPage.tsx  CopyButton.tsx  InfoTooltip.tsx  LendPage.tsx  LiquidationLeaderboard.tsx  Navbar.tsx  PositionList.tsx  ProfilePage.tsx  StatCard.tsx  VaultDashboard.tsx  WalletButton.tsx
frontend/src/hooks/: useAgent.ts  useLeaderboard.ts  useProfile.ts  useVault.ts  useWallet.ts
frontend/src/lib/: config.ts  freighter.ts  horizon.ts  mock_data.ts  soroban.ts  vault.ts  wallets.ts
scripts/: deploy.sh
src/hooks/: useSubscription.ts
src/pages/: Home.tsx
(+7 files in other folders)
