[workspace]
members = ["contracts/*"]
resolver = "2"

[workspace.package]
authors = ["Thompson"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/godbrand/argent"
version = "0.1.0"

[workspace.dependencies.soroban-sdk]
version = "23.1.0"

[profile.release]
opt-level = "z"
debug = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
overflow-checks = true
strip = true

[profile.release-with-logs]
debug-assertions = true
inherits = "release"
